[tool.poetry]
name = "fds-py"
version = "0.1.0"
description = ""
authors = ["Saikat Karmakar"]
license = "LGPL-3.0, GPL-3.0"
readme = "README.md"
packages = [{ include = "fds" }]

[tool.poetry.dependencies]
python = "^3.8"          # ">=3.8,<3.12"
eth-ape = "*"
ape-alchemy = "*"
ape-solidity = "*"
ape-foundry = "*"
ape-etherscan = "*"
pyscaffold = "^4.5"
cryptography = "^41.0.4"
# eth-tester = "^0.9.1b1"
coverage-enable-subprocess = "^1.0"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.project]
name = "fds"

# [tool.pytest.ini_options]
# addopts = [
#     "--import-mode=importlib",
# ]
